added abstract and table of contents, along with 10 references.

--- a/TAS.tex
+++ b/TAS.tex
@@ -5,6 +5,7 @@
 \documentclass[runningheads]{llncs}
 %
 \usepackage{graphicx}
+\usepackage{hyperref}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
@@ -26,31 +27,46 @@
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
-\institute{Concordia University, Montreal QC, Canada}
+\institute{Concordia University, Montreal QC, Canada \\
 % Springer Heidelberg, Tiergartenstr. 17, 69121 Heidelberg, Germany
 % \email{lncs@springer.com}\\
 % \url{http://www.springer.com/gp/computer-science/lncs} \and
 % ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
-% \email{\{abc,lncs\}@uni-heidelberg.de}}
+\email{namra.solanki@mail.concordia.ca}}
 %
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-The abstract should briefly summarize the contents of the paper in
-15--250 words.
+A review article explores the evolution of communication strategies from an engineering manager to a CEO, shedding light on challenges faced when interacting with upper management. Early frustrations stemmed from perceived disconnect between non-technical aspects of the business and technical initiatives. With organizational growth, inherent complexity demands strategic communication. \\
 
-\keywords{First keyword  \and Second keyword \and Another keyword.}
+The transition to a CEO role unveiled a two-fold challenge: competing demands for attention and the need for more effective communication. Tips for executive communication and presentations are distilled for graduate-level consideration. The granularity of conversations should align with company size, emphasizing independence in managing tactical concerns while communicating broader themes. Proactive communication is crucial, urging managers to push updates even in non-crisis situations. In larger companies, bursty updates serve as valuable reminders. A three-step communication process with executives is outlined, emphasizing clarity and a structured approach. \\
+
+Writing a narrative before presentations aids in identifying gaps and considering diverse perspectives. The article advises against evasiveness, preparing for unexpected questions, and utilizing data for a results-oriented approach. The importance of leading meetings with a clear goal is highlighted, respecting executive time and favoring clarity over ambiguity. These strategies collectively form a comprehensive guide for effective executive communication and leadership amidst organizational growth.
+
+\keywords{Communication  \and Project Management \and Leadership \and Data-driven Decision Making \and Effective Presentation}
 \end{abstract}
 %
 %
 %
-\section{First Section}
-\subsection{A Subsection Sample}
-Please note that the first paragraph of a section or subsection is
-not indented. The first paragraph that follows a table, figure,
-equation etc. does not need an indent, either.
+\section{Table of Contents}
 
-Subsequent paragraphs, however, are indented.
+\begin{table}
+\centering
+\caption{Table of Contents}\label{tab1}
+\begin{tabular}{|l|c|}
+\hline
+Title &  Page Number\\
+\hline
+Abstract & 1\\
+Introduction &  1\\
+Background Material & 1\\
+Methods and Methodology & 1\\
+Results Obtained & 1\\
+Conclusion and Future Work & 1\\
+References & 1\\
+\hline
+\end{tabular}
+\end{table}
 
 \subsubsection{Sample Heading (Third Level)} Only two levels of
 headings should be numbered. Lower level headings remain unnumbered;
@@ -126,23 +142,38 @@ and a homepage~\cite{ref_url1}. Multiple citations are grouped
 %
 \begin{thebibliography}{8}
 \bibitem{ref_article1}
-Author, F.: Article title. Journal \textbf{2}(5), 99--110 (2016)
+Title: Motivation and Stakeholder Acceptance in Technology-driven Change Management: Implications for the Engineering Manager. \href{https://www.tandfonline.com/doi/abs/10.1080/10429247.2008.11431764}{Paper Link}, Author: \href{https://scholar.google.com/citations?user=7_LPDDQAAAAJ&hl=en}{Suzanna Long}, \href{https://emse.mst.edu/facultystafffacilities/emsefaculty/davidspurlock/}{David G. Spurlock}
 
-\bibitem{ref_lncs1}
-Author, F., Author, S.: Title of a proceedings paper. In: Editor,
-F., Editor, S. (eds.) CONFERENCE 2016, LNCS, vol. 9999, pp. 1--13.
-Springer, Heidelberg (2016). \doi{10.10007/1234567890}
+\bibitem{ref_article2}
+Title: A Transactional Model of Communication. \href{https://www.taylorfrancis.com/chapters/edit/10.4324/9781315080918-5/transactional-model-communication-dean-barnlund}{Book Link}, Author: \href{https://scholar.google.com/citations?user=7_LPDDQAAAAJ&hl=en}{Suzanna Long}
 
-\bibitem{ref_book1}
-Author, F., Author, S., Author, T.: Book title. 2nd edn. Publisher,
-Location (1999)
+\bibitem{ref_article3}
+Title: Project Management Communication: a Systems Approach \href{https://www.researchgate.net/publication/220195825_Project_Management_Communication_a_Systems_Approach}{Paper Link}, Author: Sharlett Gillard, Jane Johansen
 
-\bibitem{ref_proc1}
-Author, A.-B.: Contribution title. In: 9th International Proceedings
-on Proceedings, pp. 1--2. Publisher, Location (2010)
+\bibitem{ref_article4}
+Authon: Loo, R. (2002). Title: Journaling: A Learning Tool for Project Management Training and Team-building. Project Management Journal. \href{https://doi.org/10.1177/875697280203300407}{DOI link}
 
-\bibitem{ref_url1}
-LNCS Homepage, \url{http://www.springer.com/lncs}. Last accessed 4
-Oct 2017
+\bibitem{ref_article5}
+Author: \href{https://scholar.google.com/citations?user=o355sjwAAAAJ&hl=en}{Rodriguez, Pedro}. (2017). Conceptual model of communication theories within project process. INNOVA Research Journal. 2. 42-51. 10.33890/innova.v2.n3.2017.131. 
+
+\bibitem{ref_article6}
+Authors: Smit, Marius and Bond-Barnard, Taryn and Steyn, H. Fabris-Rotelli, Inger. (2017). Title: Email communication in project management: A bane or a blessing?. South African Journal of Information Management. in press. 10.4102/sajim.v19i1.826.\href{https://www.researchgate.net/publication/313770452_Email_communication_in_project_management_A_bane_or_a_blessing} {Paper Link}
+
+\bibitem{ref_article7}
+Authors: \href{https://www.researchgate.net/profile/Jonas-Stier}{Stier, Jonas} and \href{https://www.researchgate.net/profile/Margareta-Sandstroem}{Sandström, Margareta. (2009).} Communicative challenges in multinational project work: Obstacles and tools for reaching common understandings. Journal of Intercultural Communication. 9. 10.36923/jicc.v9i3.489. \href{https://www.researchgate.net/publication/285593311_Communicative_challenges_in_multinational_project_work_Obstacles_and_tools_for_reaching_common_understandings}{Paper Link}
+
+\bibitem{ref_article8}
+Author: \href{https://www.scopus.com/authid/detail.uri?authorId=6602223274}{John Wateridge},
+Title: Training for IS/IT project managers: A way forward, International Journal of Project Management, ISSN 0263-7863, \href{https://doi.org/10.1016/S0263-7863(96)00085-3}{Paper Link}.
+
+\bibitem{ref_article9}
+Author: \href{https://scholar.google.com/citations?user=WjhruLQAAAAJ&hl=en}{BG Zulch},
+Title: Communication: The Foundation of Project Management, Procedia Technology, ISSN 2212-0173,
+https://doi.org/10.1016/j.protcy.2014.10.054. \href{https://www.sciencedirect.com/science/article/pii/S2212017314002813}{Paper Link}
+
+\bibitem{ref_article10}
+Author: \href{https://scholar.google.com/citations?user=WjhruLQAAAAJ&hl=en}{BG Zulch},
+Title: Leadership Communication in Project Management, Procedia - Social and Behavioral Sciences, ISSN 1877-0428, https://doi.org/10.1016/j.sbspro.2014.03.021.
+\href{https://www.sciencedirect.com/science/article/pii/S1877042814021120}{Paper Link}
 \end{thebibliography}
 \end{document}
